# companyai-chat

./: .basedpyrightconfig.json  README.md  pyrightconfig.json
.zed/: settings.json
backend/: .gitignore  SETUP.md  pyproject.toml
backend/app/: agent.py  endpoint.py  main.py  request.py  router.py  schemas.py
backend/app/agents/: antOauth.py
frontend/: .gitignore  README.md  package.json  tsconfig.app.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: ChatMessage.vue  ChatMessages.vue  ChatPrompt.vue  Logo.vue  Navbar.vue  Sidebar.vue
frontend/src/composables/: useChat.ts  useChatHistory.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/types/: chat.ts
frontend/src/views/: ChatView.vue  HomeView.vue
typings/: README.md  py.typed
typings/langchain_custom/: __init__.pyi
typings/runtime/: common_patterns.pyi  langchain.pyi  langchain_anthropic.pyi  langchain_anthropic_detailed.json  langchain_core.pyi  langchain_core_detailed.json  langchain_detailed.json
