[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi[standard]>=0.121.1",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.3",
    "requests>=2.31.0",
    "sqlalchemy[asyncio]==2.0.36",
]
